# django-fitnotes

./: .gitignore  README.rst  pyproject.toml
django_fitnotes/: manage.py
django_fitnotes/django_fitnotes/: asgi.py  urls.py  wsgi.py
django_fitnotes/exercises/: admin.py  exceptions.py  filters.py  models.py  pagination.py  serializers.py  urls.py  utils.py  views.py
django_fitnotes/exercises/management/commands/: loadexercisefile.py
django_fitnotes/exercises/migrations/: 0001_initial.py
